# matrix-content-scanner-python

./: .dockerignore  .gitignore  Cargo.toml  README.md  build_rust.py  config.sample.yaml  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker.yaml  zizmor.yml
docker/: Dockerfile
docs/: api.md
matrix_content_scanner/: config.py  config.sample.yaml  crypto.py  httpserver.py  logging.py  logutils.py  mcs.py
matrix_content_scanner/http/: download.py  public_key.py  scan.py  thumbnail.py
matrix_content_scanner/scanner/: file_downloader.py  scanner.py
matrix_content_scanner/servlets/: __init__.py  download.py  public_key.py  scan.py  thumbnail.py
matrix_content_scanner/utils/: __init__.py  constants.py  encrypted_file_metadata.py  errors.py  types.py
perf/: .gitignore  config.yaml  dummy_scan.sh  pickle_path  scanner_perf.py
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
rust/src/crypto/: mod.rs
scripts-dev/: lint.sh
src/matrix_content_scanner/: __init__.py  config.py  crypto.py  httpserver.py  logutils.py  mcs.py
src/matrix_content_scanner/mcs_rust/: __init__.pyi  crypto.pyi
src/matrix_content_scanner/scanner/: file_downloader.py  scanner.py
src/matrix_content_scanner/servlets/: __init__.py  download.py  public_key.py  scan.py  thumbnail.py
src/matrix_content_scanner/utils/: constants.py  encrypted_file_metadata.py  errors.py  rust.py  types.py
tests/: __init__.py  test_config.py  test_crypto.py  testutils.py
tests/http/: test_http_utils.py
tests/scanner/: test_file_downloader.py  test_scanner.py
tests/servlets/: __init__.py  test_headers.py  test_scan.py  test_servlets.py
tests/testdata/: request_secret
tests/utils/: test_encrypted_file_metadata.py
