[metadata]
name = matrix_content_scanner
description = A web service for scanning media hosted by a Matrix media repository
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.5
url = https://github.com/vector-im/matrix-content-scanner-python

classifiers =
  License :: OSI Approved :: Apache Software License

[options]
package_dir = =src
python_requires = >= 3.8
install_requires =
  attrs
  aiohttp
  jsonschema
  pyyaml
  # Required for decrypting encrypted files.
  mautrix[detect_mimetype]
  python-olm
  unpaddedbase64
  PyCryptodome
  # Required for maintaining the result cache.
  cachetools
  # Required for processing user-defined values such as durations or sizes.
  humanfriendly
  # Required for calculating cache keys deterministically. Type annotations aren't
  # discoverable in versions older than 1.6.3.
  canonicaljson >= 1.6.3


[options.extras_require]
dev =
  # for tests
  tox
  # for type checking
  mypy == 1.7.1
  types-jsonschema
  types-PyYAML
  types-cachetools
  types-humanfriendly
  # for linting
  black == 22.3.0
  flake8 == 4.0.1
  isort == 5.9.3


[flake8]
# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  W503: line break before binary operator
#  W504: line break after binary operator
#  E203: whitespace before ':' (which is contrary to pep8?)
#  E501: Line too long (black enforces this for us)
# (this is a subset of those ignored in Synapse)
ignore=W503,W504,E203,E501
