[package]
name = "matrix_content_scanner"
# dummy version. See pyproject.toml for the actual version number.
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "matrix_content_scanner"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.63"
lazy_static = "1.4.0"
log = "0.4.17"
matrix-sdk-crypto = "0.7.2"
pyo3 = { version = "0.21.0", features = [
    "macros",
    "anyhow",
    "abi3",
    "abi3-py310",
] }
pyo3-log = "0.10.0"
pythonize = "0.21.0"
serde_json = "1.0.85"
vodozemac = { git = "https://github.com/matrix-org/vodozemac.git", features = ["insecure-pk-encryption"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
blake2 = "0.10.4"
hex = "0.4.3"
